--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -4,10 +4,12 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        py-version: [3.7 , 3.8, 3.9]
     steps:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.7
-        
+        python-version: {{ matrix.py-version }}
