--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -3,11 +3,13 @@ name: Installing Python
 on: [push]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build_matrix:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.7
-        
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.7
